# cube-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt  versions.txt
src/cube_bench/: __init__.py  cli.py  config.py  io.py  orchestrator.py  utils.py
src/cube_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cube_bench/core/: __init__.py  base.py
src/cube_bench/optimal/: coord.py  cubie.py  defs.py  face.py  moves.py  performance.py  pruning.py  solver.py  symmetries.py
src/cube_bench/prompts/: prompt_factory.py  prompts.json  reflection.json
src/cube_bench/runtime/: __init__.py  model_assistant.py
src/cube_bench/runtime/results/: move_effect.json
src/cube_bench/sim/: __init__.py  cube_simulator.py
src/cube_bench/tests/: __init__.py  invariance_sweep.py  learning_curve.py  move_effect.py  persistence_blackout.py  reconstruction.py  reflection.py  solve_moves.py  step_by_step.py  verification.py
